# zerokb

./: Cargo.toml  LICENSE  Makefile  README.md
ansible/: deploy-zerokb.yml  inventory.yml  upgrade.yml
scripts/: hid-setup.sh
src/: keymap.rs  main.rs
systemd/: zerokb-hid.service  zerokb.service
